--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,13 @@
 
 name: Java CI with Maven
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches:
+      - '**'
+    tags:
+      - 'release-*.*.*'
+  pull_request:
 
 jobs:
   build:
@@ -30,3 +36,33 @@ jobs:
 
       - name: Build with Maven
         run: mvn -B package -P samply
+
+      - name: Extract docker tag
+        id: extract_docker_tag
+        shell: bash
+        # this is needed, because tags GITHUB_REF is inconsistent for pull requests.
+        if: ${{ github.event_name != 'pull_request' }}
+        run: echo "##[set-output name=tag;]$(echo ${GITHUB_REF##*/};)"
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          context: .
+          file: ./Dockerfile
+          # Which platforms are needed?
+          platforms: linux/amd64,linux/arm64,linux/386
+          push: true
+          tags: torbenbrenner/samply-share:samply-${{ steps.extract_docker_tag.outputs.tag }}
